--- a/install-nodejs-ubuntu.html
+++ b/install-nodejs-ubuntu.html
@@ -10,14 +10,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Install nodejs on ubuntu using nvm the most easiest way and to stay updated on latest release of nodejs.">
   <meta name="author" content="Shreyas MM" />
-  <link rel="canonical" href="https://shreyasmm.com/install-nodejs-ubuntu">
-  <link rel="alternate" type="application/rss+xml" title="Shreyas M M RSS Feed" href="https://shreyasmm.com/feed/"/>
+  <link rel="canonical" href="http://localhost:4000/install-nodejs-ubuntu">
+  <link rel="alternate" type="application/rss+xml" title="Shreyas M M RSS Feed" href="http://localhost:4000/feed/"/>
   
   <!-- Opengraph Tags-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="article" />
   <meta property="og:site_name" content="Shreyas MM" />
-  <meta property="og:url" content="https://shreyasmm.com/install-nodejs-ubuntu" />
+  <meta property="og:url" content="http://localhost:4000/install-nodejs-ubuntu" />
   <meta property="og:title" content="How to Install Nodejs on Ubuntu" />
   <meta property="og:description" content="Install nodejs on ubuntu using nvm the most easiest way and to stay updated on latest release of nodejs." />
 
