--- a/a-new-beginning.html
+++ b/a-new-beginning.html
@@ -10,14 +10,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Welcome to my new site.I am Shreyas MM.I Live in Bangalore, India. My area of focus is Server Management, Web development, and i am hobbyist Designer.">
   <meta name="author" content="Shreyas MM" />
-  <link rel="canonical" href="https://shreyasmm.com/a-new-beginning">
-  <link rel="alternate" type="application/rss+xml" title="Shreyas M M RSS Feed" href="https://shreyasmm.com/feed/"/>
+  <link rel="canonical" href="http://localhost:4000/a-new-beginning">
+  <link rel="alternate" type="application/rss+xml" title="Shreyas M M RSS Feed" href="http://localhost:4000/feed/"/>
   
   <!-- Opengraph Tags-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="article" />
   <meta property="og:site_name" content="Shreyas MM" />
-  <meta property="og:url" content="https://shreyasmm.com/a-new-beginning" />
+  <meta property="og:url" content="http://localhost:4000/a-new-beginning" />
   <meta property="og:title" content="A New Beginning" />
   <meta property="og:description" content="Welcome to my new site.I am Shreyas MM.I Live in Bangalore, India. My area of focus is Server Management, Web development, and i am hobbyist Designer." />
 
