--- a/avl-trees-implementation-in-python.html
+++ b/avl-trees-implementation-in-python.html
@@ -10,14 +10,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="How to implement AVL Trees in python.">
   <meta name="author" content="Shreyas MM" />
-  <link rel="canonical" href="https://shreyasmm.com/avl-trees-implementation-in-python">
-  <link rel="alternate" type="application/rss+xml" title="Shreyas M M RSS Feed" href="https://shreyasmm.com/feed/"/>
+  <link rel="canonical" href="http://localhost:4000/avl-trees-implementation-in-python">
+  <link rel="alternate" type="application/rss+xml" title="Shreyas M M RSS Feed" href="http://localhost:4000/feed/"/>
   
   <!-- Opengraph Tags-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="article" />
   <meta property="og:site_name" content="Shreyas MM" />
-  <meta property="og:url" content="https://shreyasmm.com/avl-trees-implementation-in-python" />
+  <meta property="og:url" content="http://localhost:4000/avl-trees-implementation-in-python" />
   <meta property="og:title" content="AVL Trees Implementation in Python" />
   <meta property="og:description" content="How to implement AVL Trees in python." />
 
