--- a/how-to-install-tomcat.html
+++ b/how-to-install-tomcat.html
@@ -10,14 +10,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Installing Java, Tomcat and Tomcat server configuration.">
   <meta name="author" content="Shreyas MM" />
-  <link rel="canonical" href="https://shreyasmm.com/how-to-install-tomcat">
-  <link rel="alternate" type="application/rss+xml" title="Shreyas M M RSS Feed" href="https://shreyasmm.com/feed/"/>
+  <link rel="canonical" href="http://localhost:4000/how-to-install-tomcat">
+  <link rel="alternate" type="application/rss+xml" title="Shreyas M M RSS Feed" href="http://localhost:4000/feed/"/>
   
   <!-- Opengraph Tags-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="article" />
   <meta property="og:site_name" content="Shreyas MM" />
-  <meta property="og:url" content="https://shreyasmm.com/how-to-install-tomcat" />
+  <meta property="og:url" content="http://localhost:4000/how-to-install-tomcat" />
   <meta property="og:title" content="How to Install Tomcat" />
   <meta property="og:description" content="Installing Java, Tomcat and Tomcat server configuration." />
 
