--- a/i-just-cleared-rhce.html
+++ b/i-just-cleared-rhce.html
@@ -10,14 +10,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="How clear RHCE, Some tips on how to clear the RHCE,RHCSA is very easy it involves many basic Linux things RHCE is more advanced.">
   <meta name="author" content="Shreyas MM" />
-  <link rel="canonical" href="https://shreyasmm.com/i-just-cleared-rhce">
-  <link rel="alternate" type="application/rss+xml" title="Shreyas M M RSS Feed" href="https://shreyasmm.com/feed/"/>
+  <link rel="canonical" href="http://localhost:4000/i-just-cleared-rhce">
+  <link rel="alternate" type="application/rss+xml" title="Shreyas M M RSS Feed" href="http://localhost:4000/feed/"/>
   
   <!-- Opengraph Tags-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="article" />
   <meta property="og:site_name" content="Shreyas MM" />
-  <meta property="og:url" content="https://shreyasmm.com/i-just-cleared-rhce" />
+  <meta property="og:url" content="http://localhost:4000/i-just-cleared-rhce" />
   <meta property="og:title" content="I Just Cleared RHCE" />
   <meta property="og:description" content="How clear RHCE, Some tips on how to clear the RHCE,RHCSA is very easy it involves many basic Linux things RHCE is more advanced." />
 
