--- a/tomcat-log-rotation-compression-encryption-gdpr-compliance-and-copy-to-aws-s3.html
+++ b/tomcat-log-rotation-compression-encryption-gdpr-compliance-and-copy-to-aws-s3.html
@@ -10,14 +10,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Tomcat server log rotation and encrypting logs, copying logs to AWS S3.">
   <meta name="author" content="Shreyas MM" />
-  <link rel="canonical" href="https://shreyasmm.com/tomcat-log-rotation-compression-encryption-gdpr-compliance-and-copy-to-aws-s3">
-  <link rel="alternate" type="application/rss+xml" title="Shreyas M M RSS Feed" href="https://shreyasmm.com/feed/"/>
+  <link rel="canonical" href="http://localhost:4000/tomcat-log-rotation-compression-encryption-gdpr-compliance-and-copy-to-aws-s3">
+  <link rel="alternate" type="application/rss+xml" title="Shreyas M M RSS Feed" href="http://localhost:4000/feed/"/>
   
   <!-- Opengraph Tags-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="article" />
   <meta property="og:site_name" content="Shreyas MM" />
-  <meta property="og:url" content="https://shreyasmm.com/tomcat-log-rotation-compression-encryption-gdpr-compliance-and-copy-to-aws-s3" />
+  <meta property="og:url" content="http://localhost:4000/tomcat-log-rotation-compression-encryption-gdpr-compliance-and-copy-to-aws-s3" />
   <meta property="og:title" content="Tomcat Log Rotation, Compression, Encryption (GDPR Compliance) and Copy to AWS S3" />
   <meta property="og:description" content="Tomcat server log rotation and encrypting logs, copying logs to AWS S3." />
 
